Bug 386268, Animated GIF doesn't loop properly, Patch by Alfred Kayser, r=pavlov, sr=tor, a=blocking1.9